istio-resources/staging/primary-ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "primary-ingress"
  namespace: "istio-system"
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "primary-istio-ingress-static-ip"
spec:
  backend:
    serviceName: "istio-ingressgateway"
    servicePort: 80
